// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeedbackToggle /> renders correctly checked for initiatives 1`] = `
<FeedbackToggle__Container
  className="feedback_needed_filter_toggle"
  id="e2e-feedback_needed_filter_toggle"
>
  <FeedbackToggle__ToggleContainer
    checked={true}
    onClick={[Function]}
  >
    <input
      aria-checked={true}
      role="checkbox"
      type="checkbox"
    />
    <i />
  </FeedbackToggle__ToggleContainer>
  <FeedbackToggle__StyledLabel
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Only show inputs that need feedback"
      id="app.components.admin.PostManager.inputsNeedFeedbackToggle"
    />
    <CountBadge
      count={6}
    />
  </FeedbackToggle__StyledLabel>
</FeedbackToggle__Container>
`;

exports[`<FeedbackToggle /> renders correctly unchecked for ideas 1`] = `
<FeedbackToggle__Container
  className="feedback_needed_filter_toggle"
  id="e2e-feedback_needed_filter_toggle"
>
  <FeedbackToggle__ToggleContainer
    checked={false}
    onClick={[Function]}
  >
    <input
      aria-checked={false}
      role="checkbox"
      type="checkbox"
    />
    <i />
  </FeedbackToggle__ToggleContainer>
  <FeedbackToggle__StyledLabel
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="Only show inputs that need feedback"
      id="app.components.admin.PostManager.inputsNeedFeedbackToggle"
    />
    <CountBadge
      count={6}
    />
  </FeedbackToggle__StyledLabel>
</FeedbackToggle__Container>
`;
